
  [Snap-1792] Snappy Monitoring UI now also displays Member Details View which shows member specific information,
  various statistics (like Status, CPU, Memory, Heap & Off-Heap Usages, etc) and members logs in incremental way.
  
  [Snap-1890] Snappy Monitoring UI displays new Pulse logo. Also product and it's build details are shown under version 
  in pop up window.


Release 0.9

- New Features/Fixed Issues

  [Snap-1286] Thin Client Smart Connector implementation.

  [SNAP-1235] Overhaul SnappyUnifiedMemoryManager to work properly for overflow.

  [SNAP-1454] Support for Off-Heap in column store.

  [SNAP-1413] install_jar does not work for Streaming jobs. Handled classloader in case of 
  Streaming factory as well.

  [SNAP-1424] Add a "shouldStop()" call to EncoderScanExec. The "shouldStop()" check is necessary 
  because if the target is a RowWriter (e.g. the parent is an EXCHANGE) then the same row gets 
  reused.

  [SNAP-1304] Implementation of Snapshot Isolation in snappydata.

  [SNAP-990] Column wise storage in region for better perf instead of full cachedbatch.
    
  [SNAP-1346] Plan caching ignoring constant values.

  [SNAP-1323] Support parameterized prepared statements for routed queries. Changes for improved
  execution of prepared statement on column table through JDBC route.

  JDBC CDC Streaming support. (https://github.com/SnappyDataInc/snappydata/pull/622)

  [SNAP-1655] Support for boolean in row table.
    
  [SNAP-1705] Support slash ('/') and special characters in column names.

  [SNAP-1698] Snappy Dashboard UI Enhancements

  Multi-grid master (https://github.com/SnappyDataInc/snappydata/pull/628)
    
  [SNAP-1545] Redesigned SnappyData Dashboard. Now displays detailed member description, heap and
  off-heap usage along with snappy storage and execution splits. It also displays cluster level
  aggregate Memory and CPU usage.

  [SNAP-1642] Avoid plan caching for queries with subqueries as the underlying changing data does